[gd_scene load_steps=9 format=3 uid="uid://bflda8jihxrhy"]

[ext_resource type="PackedScene" path="res://Better Celestial Bodies/CelestialBody.tscn" id="1"]
[ext_resource type="Script" path="res://Better Celestial Bodies/BlackHole/BlackHoleType.gd" id="2"]
[ext_resource type="Script" path="res://Better Celestial Bodies/BlackHole/Body.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://c5vv22egm1bxy" path="res://Better Celestial Bodies/body.png" id="3_olgq7"]
[ext_resource type="Shader" uid="uid://b87dnnl3olhws" path="res://Better Celestial Bodies/BlackHole/BlackHoleAura.tres" id="6"]
[ext_resource type="PackedScene" path="res://Better Celestial Bodies/SuckArea.tscn" id="7"]

[sub_resource type="Gradient" id="1"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0.362694, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="2"]
resource_local_to_scene = true
shader = ExtResource("6")
shader_parameter/force = 1.0

[node name="BlackHole" instance=ExtResource("1")]

[node name="Tail" parent="." index="0"]
gradient = SubResource("1")

[node name="CollisionArea" parent="." index="1"]
visible = true
collision_layer = 4
collision_mask = 21

[node name="Type" parent="." index="2"]
script = ExtResource("2")

[node name="Body" type="Sprite2D" parent="Type" index="0"]
z_index = 4
texture = ExtResource("3_olgq7")
script = ExtResource("3")

[node name="Aura" type="Sprite2D" parent="Type" index="1"]
light_mask = 2
z_index = 3
material = SubResource("2")
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(1.75, 1.75)

[node name="SuckArea" parent="Type" index="2" instance=ExtResource("7")]
collision_layer = 0
collision_mask = 40

[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="change_mass" from="Type" to="." method="_change_mass"]
[connection signal="change_radius" from="Type" to="." method="_change_radius"]
[connection signal="change_velocity" from="Type" to="." method="_change_velocity"]
[connection signal="switch_tail" from="Type" to="." method="_on_Type_switch_tail"]
[connection signal="area_entered" from="Type/SuckArea" to="Type" method="_on_SuckArea_area_entered"]
[connection signal="area_exited" from="Type/SuckArea" to="Type" method="_on_SuckArea_area_exited"]
